<?xml version="1.0" encoding="utf-8"?>
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical" >
     
        <LinearLayout
	    android:orientation="vertical" android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center">
	    
            <ImageView
		        android:layout_margin="20dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/imageView"
		        android:src="@drawable/small_logo" />
		    
		    <TextView
		        android:layout_margin="10dp"
		        android:id="@+id/aboutMsg"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/aboutMsg"
		        android:gravity="center">
		    </TextView>
		        
		    <TextView
		        android:id="@+id/developedBy"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/developedBy">
		    </TextView>
		    
		    <TextView
		        android:id="@+id/developerName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/developerName">
		    </TextView>
		    <TextView
		        android:id="@+id/developerSite"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/developerSite">
		    </TextView>
		    
		    <TextView
		        android:layout_marginTop="5dp"
		        android:id="@+id/designedBy"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/designedBy">
		    </TextView>
		    <TextView
		        android:id="@+id/designerName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/designerName">
		    </TextView>
		    <TextView
		        android:id="@+id/designerSite"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/designerSite"
		        android:layout_marginBottom="20dp">
		    </TextView>
	    </LinearLayout>
 	</ScrollView>
</LinearLayout>