<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <!--<item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />-->
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_bookmark"
            android:title="@string/action_favorite"/>
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_menu_thumb_up"
            android:title="@string/action_rating" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/action_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_power"
            android:title="@string/action_logout" />
        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
