<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forecastRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/addFavLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:tint="@color/colorSnow"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_table_access_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/time"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:tint="@color/colorSnow"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_table_big_wave"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/waveHeight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:tint="@color/colorSnow"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_table_sea_direction"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/waveDirection"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:tint="@color/colorSnow"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_table_sea_power"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/unrest"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:tint="@color/colorSnow"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_table_wind_lines"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/windSpeed"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:tint="@color/colorSnow"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_table_wind_direction"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/windDirection"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dip"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        android:layout_below="@+id/addFavLayout" >

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center" >

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TableLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="50dp"
	        android:layout_marginBottom="50dp" >

            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left"
                android:alpha="0.5"
                 />

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/graphTitle"
	            android:textColor="@color/white"
				android:gravity="start"
				android:textSize="@dimen/graph_title_size" />

            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right"
                android:alpha="0.5" />
        </LinearLayout>

    	<android.support.v4.view.ViewPager
	        android:id="@+id/viewPager"
	        android:layout_width="wrap_content"
	        android:layout_height="@dimen/graph_height"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>